--- a/.release.env
+++ b/.release.env
@@ -1,4 +1,4 @@
 TAG="v0.0.0"
 TITLE="${TAG} 👋"
-MESSAGE="hello ${TAG}"
-WASM_FILE="hello.wasm"
+MESSAGE="hello-js ${TAG}"
+WASM_FILE="hello-js.wasm"
